--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       background: #222;
       border: 1px solid #444;
       padding-top: 56.25%;
-      overflow: hidden;
+      overflow: visible;
       cursor: pointer;
     }
     .video-thumb img,
@@ -105,8 +105,8 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 75%;
-      height: 75%;
+      width: 100%;
+      height: 100%;
     }
     .btn {
       position: absolute;
