--- a/index.html
+++ b/index.html
@@ -5,131 +5,158 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>YouTubeプレイヤー（保存・サムネ対応）</title>
   <style>
-    body {
-      margin: 0;
-      background: #000;
-      color: #fff;
-      font-family: sans-serif;
-    }
-    #topBar {
-      width: 100%;
-      background: #111;
-      padding: 0.5px;
-      position: fixed;
-      top: 0;
-      left: 0;
-      z-index: 9999;
-      text-align: right;
-    }
-    #showPopupBtn {
-      position: absolute;
-      top: 0%;
-      right: 0%;
-      width: 12vw;
-      height: 4vw;
-      min-width: 32px;
-      min-height: 20px;
-      font-size: 1.5vw;
-      background: #222;
-      color: white;
-      border: 1px solid #555;
-      cursor: pointer;
-    }
-    .popup {
-      display: none;
-      position: fixed;
-      inset: 0;
-      background: rgba(0, 0, 0, 0.7);
-      z-index: 9998;
-    }
-    .popup.active {
-      display: block;
-    }
+  body {
+    margin: 0;
+    background: #000;
+    color: #fff;
+    font-family: sans-serif;
+  }
+  #topBar {
+    width: 100%;
+    background: #111;
+    padding: 0.5px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    text-align: right;
+  }
+  #showPopupBtn {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+    width: 12vw;
+    height: 4vw;
+    min-width: 32px;
+    min-height: 20px;
+    font-size: 1.5vw;
+    background: #222;
+    color: white;
+    border: 1px solid #555;
+    cursor: pointer;
+  }
+  .popup {
+    display: none;
+    position: fixed;
+    inset: 0;
+    background: rgba(0, 0, 0, 0.7);
+    z-index: 9998;
+  }
+  .popup.active {
+    display: block;
+  }
+  #popupControls {
+    position: fixed;
+    top: 10%;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #111;
+    border: 1px solid #444;
+    padding: 16px;
+    z-index: 9999;
+    max-width: 600px;
+    width: 90%;
+    max-height: 80vh;
+    overflow-y: auto;
+    box-shadow: 0 0 10px #000;
+  }
+  #popupClose {
+    background: red;
+    color: white;
+    border: none;
+    cursor: pointer;
+    position: absolute;
+    top: 0.5vw;
+    right: 0.5vw;
+    font-size: 2vw;
+  }
+  #controls {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .control-group {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  select, input, button {
+    font-size: 14px;
+    padding: 6px;
+    flex: 1;
+  }
+  #container {
+    display: grid;
+    gap: 10px;
+    padding: 10px;
+    margin-top: 50px;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+  }
+  .video-thumb {
+    position: relative;
+    background: #222;
+    border: 1px solid #444;
+    padding-top: 56.25%;
+    overflow: visible;
+    cursor: pointer;
+  }
+  .video-thumb img,
+  .video-thumb iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  .btn {
+    position: absolute;
+    z-index: 10;
+    background: rgba(0, 0, 0, 0.5);
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 10px;
+    padding: 4px;
+  }
+  .btn-close { top: 2px; right: 2px; background: red; }
+  .btn-up { top: 2px; left: 2px; }
+  .btn-down { top: 28px; left: 2px; }
+  .volume-slider {
+    position: absolute;
+    left: 2px;
+    bottom: 2px;
+    width: 30%;
+    height: 16px;
+    z-index: 11;
+  }
+
+  /* --- スマホ対応用メディアクエリ --- */
+  @media (max-width: 600px) {
     #popupControls {
-      position: fixed;
-      top: 10%;
-      left: 50%;
-      transform: translateX(-50%);
-      background: #111;
-      border: 1px solid #444;
-      padding: 16px;
-      z-index: 9999;
-      max-width: 600px;
-      width: 90%;
-      max-height: 80vh;
-      overflow-y: auto;
-      box-shadow: 0 0 10px #000;
+      top: 5%;
+      width: 95%;
+      font-size: 14px;
     }
     #popupClose {
-      background: red;
-      color: white;
-      border: none;
-      cursor: pointer;
-      position: absolute;
-      top: 0.5vw;
-      right: 0.5vw;
-      font-size: 2vw;
-    }
-    #controls {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .control-group {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
+      font-size: 5vw;
+      top: 2vw;
+      right: 2vw;
     }
     select, input, button {
-      font-size: 14px;
-      padding: 6px;
-      flex: 1;
-    }
-    #container {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-      gap: 10px;
-      padding: 10px;
-      margin-top: 10px;
-    }
-    .video-thumb {
-      position: relative;
-      background: #222;
-      border: 1px solid #444;
-      padding-top: 56.25%;
-      overflow: visible;
-      cursor: pointer;
-    }
-    .video-thumb img,
-    .video-thumb iframe {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
+      font-size: 12px;
+      padding: 6px 4px;
     }
     .btn {
-      position: absolute;
-      z-index: 10;
-      background: rgba(0, 0, 0, 0.5);
-      color: white;
-      border: none;
-      cursor: pointer;
-      font-size: 10px;
-      padding: 4px;
+      font-size: 8px;
+      padding: 3px;
     }
-    .btn-close { top: 2px; right: 2px; background: red; }
-    .btn-up { top: 2px; left: 2px; }
-    .btn-down { top: 28px; left: 2px; }
     .volume-slider {
-      position: absolute;
-      left: 2px;
-      bottom: 2px;
-      width: 30%;
-      height: 16px;
-      z-index: 11;
+      width: 40%;
+      height: 14px;
     }
-  </style>
+  }
+</style>
+
 </head>
 <body>
   <div id="topBar">
